<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundScreen"
    android:weightSum="3"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">


            <TextView
                android:id="@+id/txt_userInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/zero"
                android:textSize="30sp"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:gravity="bottom|end" />



        <TextView
            android:id="@+id/txt_answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""
            android:padding="5dp"
            android:textSize="44sp"
            android:textColor="@color/colorGrey"
            android:gravity="bottom|end" />


    </LinearLayout>

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreenLand"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/button_AC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/all_clear"
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_backSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_baseline_backspace_24"
                android:drawablePadding="2dp"
                android:paddingLeft="30dp"
                android:paddingRight="26dp"
                android:gravity="center" />
            <Button
                android:id="@+id/button_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/percent"
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showOperatorOnClick"/>
            <Button
                android:id="@+id/button_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/division"
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showOperatorOnClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_7"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
               android:text="@string/number_8"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_9"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/multiply"
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showOperatorOnClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_4"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_5"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_6"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_subtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/subtract"
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showOperatorOnClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
               android:text="@string/number_2"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_3"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/addition"
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showOperatorOnClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBlackMatte"
            android:weightSum="4">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text=""
                android:textColor="@color/colorGreenLand"
                android:textSize="30sp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/number_0"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_decimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:text="@string/decimal"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:onClick="showNumberOnClick"/>
            <Button
                android:id="@+id/button_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/circle_background"
                android:text="@string/equal"
                android:textColor="@color/colorBlackMatte"
                android:textSize="30sp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>