<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_answer"
        app:layout_constraintVertical_weight="4">

        <Button
            android:id="@+id/button_extra"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text=""
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="@string/number_0"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_decimal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_extra"
            app:layout_constraintTop_toBottomOf="@+id/button_2"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="@string/decimal"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_equal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@+id/button_3"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="@string/equal"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_decimal"
            app:layout_constraintTop_toBottomOf="@+id/button_add" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_1"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_extra"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_4"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_2"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/button_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1"
            app:layout_constraintTop_toBottomOf="@+id/button_5"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_3"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_decimal"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_2"
            app:layout_constraintTop_toBottomOf="@+id/button_6"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/addition"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_equal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_3"
            app:layout_constraintTop_toBottomOf="@+id/button_subtract"
            android:onClick="showOperatorOnClick"/>

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_4"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_1"
            app:layout_constraintEnd_toStartOf="@+id/button_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_7"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_5"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_2"
            app:layout_constraintEnd_toStartOf="@+id/button_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_4"
            app:layout_constraintTop_toBottomOf="@+id/button_8"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_6"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_3"
            app:layout_constraintEnd_toStartOf="@+id/button_subtract"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_5"
            app:layout_constraintTop_toBottomOf="@+id/button_9"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/subtract"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_6"
            app:layout_constraintTop_toBottomOf="@+id/button_multiply"
            android:onClick="showOperatorOnClick"/>

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_7"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            app:layout_constraintEnd_toStartOf="@+id/button_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_AC"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_8"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/button_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintTop_toBottomOf="@+id/button_backSpace"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/number_9"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_6"
            app:layout_constraintEnd_toStartOf="@+id/button_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintTop_toBottomOf="@+id/button_percent"
            android:onClick="showNumberOnClick"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/multiply"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_subtract"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_9"
            app:layout_constraintTop_toBottomOf="@+id/button_division"
            android:onClick="showOperatorOnClick"/>

        <Button
            android:id="@+id/button_AC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/all_clear"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_7"
            app:layout_constraintEnd_toStartOf="@+id/button_backSpace"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/button_backSpace"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text=""
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            android:src="@drawable/ic_baseline_backspace_24"
            app:layout_constraintBottom_toTopOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/button_percent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_AC"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/backspace" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/percent"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_9"
            app:layout_constraintEnd_toStartOf="@+id/button_division"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_backSpace"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="showOperatorOnClick"/>

        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/division"
            android:textColor="@color/colorGreenLand"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button_multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_percent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="showOperatorOnClick"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_userInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="bottom|end"
        android:padding="8dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:id="@+id/txt_showUserInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="bottom|end"
        android:padding="8dp"
        android:text=""
        android:background="@color/colorBackgroundScreen"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:id="@+id/txt_answer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="bottom|end"
        android:padding="8dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/colorGrey"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_userInput"
        app:layout_constraintVertical_weight="1" />
</androidx.constraintlayout.widget.ConstraintLayout>